--- a/cardápio1.html
+++ b/cardápio1.html
@@ -37,7 +37,7 @@
                 <h2>FRITURAS</h2>
                 <p>Pastel, coxinha, pizza, folhado, click na foto pra saber mais...</p>
                 <div>
-                    <a href="cardápio2.html" target="_blank">
+                    <a href="cardápio2.html">
                     <img src="img/Fritas.jpg">
                 </a>
                 </div>
