--- a/cardápio1.html
+++ b/cardápio1.html
@@ -69,7 +69,7 @@
             </section>
             
             <section id="BORDA">
-                <h2>Bordas</h2>
+                <h2>Bordas(Opcional)</h2>
                 <div>
                     <img src="img/borda-representacao.jpg" width="300px">
                 </div>
