--- a/pizzaTresQueijos.html
+++ b/pizzaTresQueijos.html
@@ -8,8 +8,11 @@
         <h2>Pizza Três Queijos</h2>
         <img src="img/pizza-tres-queijos.jpg" width="300px">
         <h3>Ingredientes</h3>
-        <p>1 xícara (chá) de molho de tomate</p>
-        <p>Queijo muçarela ralado a gosto</p>
-        <p>Orégano e azeite de oliva a gosto</p>
+        <p>4 tomates maduros sem sementes picados</p>
+        <p>1 colher (sopa) de azeite de oliva</p>
+        <p>200 g de Catupiry</p>
+        <p>50 g de queijo gorgonzola esfarelado</p>
+        <p>300 g de muçarela em fatias</p>
+        <p>Orégano e azeite de oliva</p>
     </body>
 </html>
