--- a/pizzaMussarela.html
+++ b/pizzaMussarela.html
@@ -9,7 +9,7 @@
         <img src="img/pizza-mussarela.jpg" width="300px">
         <h3>Ingredientes</h3>
         <p>1 xícara (chá) de molho de tomate</p>
-        <p>queijo muçarela ralado a gosto</p>
-        <p>orégano e azeite de oliva a gosto</p>
+        <p>200 gr queijo muçarela ralado</p>
+        <p>orégano e azeite de oliva</p>
     </body>
 </html>
