--- a/cardápio1.html
+++ b/cardápio1.html
@@ -7,7 +7,7 @@
 
     </head>
 
-    <h1 style="text-align:center">RESTAURANTE SERVICE</h1>
+    <h1 style="text-align:center">Pizzaria "Tú é gay mano?"</h1>
     
     <body>
         <nav> 
