ajuste basico de português

--- a/pizzaBacon.html
+++ b/pizzaBacon.html
@@ -8,8 +8,8 @@
         <h2>Pizza Bacon</h2>
         <img src="img/pizza-bacon.jpg" width="300px">
         <h3>Ingredientes</h3>
-        <p>1 1/2 xícara de Queijo Mussarela ralado</p>
-        <p>200 gr de bacon em cubinhos crocantes</p>
-        <p>1 colher de sopa de orégano</p>
+        <p>queijo Mussarela ralado</p>
+        <p>bacon em cubinhos crocantes</p>
+        <p>orégano</p>
     </body>
 </html>
