--- a/pizzaCalabresa.html
+++ b/pizzaCalabresa.html
@@ -8,11 +8,11 @@
         <h2>Pizza Calabresa</h2>
         <img src="img/pizza-calabresa.jpg" width="300px">
         <h3>Ingredientes</h3>
-        <p>200 gramas de presunto fatiado</p>
-        <p>200 gramas de mussarela ralada</p>
-        <p>1 Gomo de linguiça calabresa</p>
-        <p>4 colheres de sopa de cebola ralada</p>
-        <p>1 pitada de Orégano</p>
-        <p>1 xícara (chá) de molho de tomate</p>
+        <p>presunto fatiado</p>
+        <p>mussarela ralada</p>
+        <p>linguiça calabresa</p>
+        <p>cebola ralada</p>
+        <p>Orégano</p>
+        <p>molho de tomate</p>
     </body>
 </html>
