--- a/pizzaFrangoCatupiry.html
+++ b/pizzaFrangoCatupiry.html
@@ -8,8 +8,8 @@
         <h2>Pizza Frango com Catupiry</h2>
         <img src="img/pizza-frango-catupiry.jpg" width="300px">
         <h3>Ingredientes</h3>
-        <p>1 xícara (chá) de Molho de tomate</p>
-        <p>1 peito de frango cozido, desfiado e temperado com sal</p>
-        <p>1/2 caixa pequena de Catupiry cortado em fatias finas</p>
+        <p>Molho de tomate</p>
+        <p>peito de frango cozido, desfiado e temperado com sal</p>
+        <p>catupiry cortado em fatias finas</p>
     </body>
 </html>
