--- a/pizzaMussarela.html
+++ b/pizzaMussarela.html
@@ -8,8 +8,8 @@
         <h2>Pizza Mussarela</h2>
         <img src="img/pizza-mussarela.jpg" width="300px">
         <h3>Ingredientes</h3>
-        <p>1 xícara (chá) de molho de tomate</p>
-        <p>200 gr queijo muçarela ralado</p>
+        <p>molho de tomate</p>
+        <p>queijo mussarela ralado</p>
         <p>orégano e azeite de oliva</p>
     </body>
 </html>
