--- a/pizzaPortuguesa.html
+++ b/pizzaPortuguesa.html
@@ -8,12 +8,12 @@
         <h2>Pizza Portuguesa</h2>
         <img src="img/pizza-portuguesa.jpg" width="300px">
         <h3>Ingredientes</h3>
-        <p>1 xícara (chá) de molho de tomate</p>
-        <p>150 g de queijo mussarela</p>
-        <p>50 g de presunto</p>
-        <p>1 tomate em rodelas</p>
-        <p>1 ovo cozido</p>
-        <p>1 cebola picada</p>
+        <p>molho de tomate</p>
+        <p>queijo mussarela</p>
+        <p>presunto</p>
+        <p>tomate em rodelas</p>
+        <p>ovo cozido</p>
+        <p>cebola picada</p>
         <p>Orégano e azeite</p>
     </body>
 </html>
