--- a/pizzaChocolate.html
+++ b/pizzaChocolate.html
@@ -8,8 +8,8 @@
         <h2>Pizza Chocolate</h2>
         <img src="img/pizza-chocolate.jpg" width="300px">
         <h3>Ingredientes</h3>
-        <p>250g de Chocolate ao leite</p>
-        <p>10 Unidades de Morango</p>
+        <p>chocolate ao leite</p>
+        <p>morango</p>
         <p>Granulado de Chocolate</p>
     </body>
 </html>
