--- a/pizzaMarguerita.html
+++ b/pizzaMarguerita.html
@@ -8,9 +8,9 @@
         <h2>Pizza Marguerita</h2>
         <img src="img/pizza-margherita.jpg" width="300px">
         <h3>Ingredientes</h3>
-        <p>1 xícara (chá) de molho de tomate</p>
-        <p>200 gr muçarela ralada</p>
-        <p>1 tomate cortado em rodelas</p>
+        <p>molho de tomate</p>
+        <p>mussarela ralada</p>
+        <p>tomate cortado em rodelas</p>
         <p>folhas de manjericão</p>
     </body>
 </html>
