mudança de titulo

--- a/cardápio1.html
+++ b/cardápio1.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
 
     </head>
-    <h1 style="text-align:center">Pizzaria "Tú é gay mano?"</h1>
+    <h1 style="text-align:center">Pizzaria R.I.P Creativity</h1>
     
     <body>
         <nav> 
