correção de português

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
         <h3 style="text-align:center">"Não pode usar meme na atividade"</h3>
     </head>
     <body style="text-align:center">
-        <p>Temos as melhores pizzas para você que esta proibido de usar meme nas suas atividades</p>
+        <p>Temos as melhores pizzas para você que está proibido de usar meme nas suas atividades</p>
         <form action="cardapio.html">
             <button type="cardapio" onclick="cardapio.html">Ver Cardápio</button>
         </form>
