ajustes leves nas paginas

--- a/Finalizar.html
+++ b/Finalizar.html
@@ -4,6 +4,6 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <h1 style="text-align:center">Pizzaria R.I.P Creativity</h1>
-        <h3 style="text-align:center">Pedido finalizado</h3>
+        <h3 style="text-align:center">Pedido finalizado!!</h3>
     </head>
 </html>
