--- a/cardapio.html
+++ b/cardapio.html
@@ -188,7 +188,7 @@
         
     
 
-<footer>
+<footer style="text-align: center;">
     Desenvolvido por Pedro Henrique e Vanessa Araújo
 </footer>
 
